# Gaffer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Home.py
app/pages/: 1_Transfer_Planner.py  2_Player_Projections.py
data/cache/models/: ensemble_point.joblib
docs/: architecture.md  deployment-guide.md  evaluation.md  improvement-workflow.md  training.md
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_benchmark.ipynb  04_uncertainty_quantification.ipynb  05_optimization_walkthrough.ipynb
src/gaffer/: __init__.py  config.py
src/gaffer/cache/: memory_cache.py  sqlite_cache.py
src/gaffer/domain/: constraints.py  enums.py  player.py  squad.py
src/gaffer/features/: constants.py  engineering.py  preprocessing.py  rolling.py
src/gaffer/models/: base.py  ensemble.py  lightgbm_model.py  quantile.py  ridge.py  training.py  xgboost_model.py
src/gaffer/optimizer/: milp.py  result.py
src/gaffer/providers/: base.py  fpl_api.py  historical_csv.py  registry.py
src/gaffer/services/: model_cache.py  optimization_service.py  prediction_service.py
src/gaffer/ui/components/: __init__.py  pitch_display.py  player_table.py  squad_input.py
src/gaffer/visualization/: __init__.py  pitch.py  team_colors.py
tests/: conftest.py
tests/fixtures/: stub_providers.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cache.py  test_config.py  test_domain.py  test_features.py  test_models.py  test_optimizer.py
