[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaffer"
version = "0.1.0"
description = "ML + MILP Fantasy Premier League assistant: per-position ensemble predictor plus multi-gameweek squad optimizer."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "pulp>=2.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "plotly>=5.0",
    "matplotlib>=3.7",
    "streamlit>=1.30",
    "joblib>=1.3",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "jupyter>=1.0",
    "nbformat>=5.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gaffer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that hit external APIs or train full models (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
